# small_car

./: keaa-lingaoros-lingao_visual_apps-master.rar  readme.md
Lingao/lingao_follower/: CMakeLists.txt  README.md  package.xml
Lingao/lingao_follower/cfg/: Follower.cfg  HSV_reconfigure.cfg
Lingao/lingao_follower/include/: linedetect.hpp  lingao_pid.h
Lingao/lingao_follower/launch/: hsv_detection.launch  lingao_depth_follower.launch  lingao_line_follow.launch
Lingao/lingao_follower/src/: hsv_detection.cpp  linedetect.cpp  lingao_depth_follower.cpp  lingao_line_follow.cpp
Lingao/lingao_kcf_tracker/: CMakeLists.txt  README.md  package.xml
Lingao/lingao_kcf_tracker/KCFcpp/: CMakeLists.txt
Lingao/lingao_kcf_tracker/launch/: lingao_kcf_tracking.launch
Lingao/lingao_kcf_tracker/src/: target_tracking.cpp  tracking_utility.cpp
Lingao/lingao_visual/: CMakeLists.txt  package.xml
Lingao/lingao_visual/launch/: lingao_depthcamera.launch  lingao_depthcamera_to_laser.launch  lingao_yolo.launch
Lingao/lingao_visual/launch/camera/: astra.launch
